# tinyfilter

./: LICENSE  README.md  THANKS.txt  main.py  pyproject.toml
src/tinyfilter/: __init__.py  __main__.py
