[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyfilter"
version = "0.1.0"
authors = [
  { name="Zephaniah Roe", email="zroe@uchicago.edu" },
]
description = "An tiny filter..."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy ~= 1.25.0",
  "Pillow",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
tinyfilter = "tinyfilter:tiny_print"
